src/objects/AstrumPhotoAppSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Office_Filter__c</fullName>
        <label>Office Filter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Lead_Filter__c</fullName>
        <label>Project Lead Filter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>State_Filter__c</fullName>
        <label>State Filter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status_Filter__c</fullName>
        <label>Status Filter</label>
        <type>TextArea</type>
    </fields>
    <label>Astrum Photo App Settings</label>
</CustomObject>